--- a/minimal.html
+++ b/minimal.html
@@ -3,4 +3,7 @@
 <div class="title"><h1>Boxes & Balloons</h1></div> <div class="gameContainer"> 
 <canvas id="gameCanvas" onmousemove="mouseMove(event)" onmouseout="mouseOut()" onkeydown="keyDown()"></canvas> </div> 
 <div class="footer"> <span id="errormessage" style="color:red;"></span> <a href="http://ben-reilly.com">ben-reilly.com</a> </div> 
+<script src="gamecore.js"></script>
+<script src="engine.js"></script>
+
  </body> </html> 
